<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/app_email_or_phone"
            android:textSize="15dp"
            android:layout_marginTop="60dp"
            android:layout_margin="10dp"
            />
        <com.maksim88.passwordedittext.PasswordEditText

            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:hint="Password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button

            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/app_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/forgotpswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_forgot_password"
            android:layout_gravity="center"
            android:textColor="@color/colorblack"
            android:textSize="12sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="___________OR___________"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_margin="5dp"/>



        <TextView
            android:layout_width="320dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:text="@string/app_privacy"
            android:gravity="center"
            android:textColor="@color/colorblack"
            android:textSize="12sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_dont_have"
                android:layout_marginLeft="90dp"
                android:textStyle="bold"
                android:textColor="@color/colorblack"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_signup"
                android:textColor="@color/colorblack"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="14dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>